--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,14 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
-dev = [
-    "mypy>=1.14.1",
-    "pyright>=1.1.392.post0",
+
+[tool.uv]
+dev-dependencies = [
+    "copier>=9.4.1",
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
+    "pre-commit>=4.0.1",
+    "pyright>=1.1.392.post0",
     "ruff>=0.9.2",
 ]
 
