--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "copier>=9.4.1",
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
